refactor: optimize player zone detection and improve boss bar progress calculation